name:                multistream
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MatrixAI/haskell-multistream#readme
license:             BSD3
license-file:        LICENSE
author:              Quoc-An Ho
maintainer:          quocanho29@gmail.com
copyright:           Copyright: (c) 2017 Quoc-An Ho
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Multistream
  build-depends:       base >= 4.7 && < 4.10,
                       attoparsec,
                       bytestring,
                       containers,
                       io-streams,
                       protocol-buffers,
                       text
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       multistream,
                       io-streams
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MatrixAI/haskell-multistream
