name:                  multistream
version:               0.1.0.0
-- synopsis:
-- description:
homepage:              https://github.com/MatrixAI/haskell-multistream#readme
license:               BSD3
license-file:          LICENSE
author:                Quoc-An Ho
maintainer:            quoc-an.ho@matrix.ai
copyright:             Copyright: (c) 2017 Quoc-An Ho
category:              Network
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Multistream
                       Network.Multistream.Message,
                       Network.Multistream.Muxer
  build-depends:       base         >= 4.9  && < 4.10,
                       attoparsec   >= 0.13 && < 0.14,
                       binary       >= 0.8  && < 0.9,
                       bytes        >= 0.15 && < 0.16,
                       bytestring   >= 0.10 && < 0.11,
                       cereal       >= 0.5  && < 0.6,
                       containers   >= 0.5  && < 0.6,
                       io-streams   >= 1.3  && < 1.4,
                       text         >= 1.2  && < 1.3
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       multistream, 
                       base         >= 4.9 && < 4.10,
                       io-streams   >= 1.3 && < 1.4,
                       text         >= 1.2 && < 1.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MatrixAI/haskell-multistream
